# chorus

./: .dockerignore  .gitignore  CHANGELOG.md  NOTICE  README.md  SECURITY.md  SPEC.md  chorus.config.example.json  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json
agents/: orchestrator.json  pr-review-evaluator.json  qa-test-engineer.json  refactoring-agent.json  security-analyst.json  software-architect.json  software-engineer.json
apps/dashboard/: package.json  tsconfig.json  vite.config.ts
apps/dashboard/src/: App.tsx  addressPrReviews.ts  api.ts  backendChoices.ts  quotaDisplay.tsx  stateMachineModel.ts  styles.css  ticketCleanup.ts  toolPermissions.ts  usageFormat.ts
apps/dashboard/test/: about-dialog.test.ts  activity-tab.test.ts  address-pr-reviews.test.ts  layout-css.test.ts  open-prs.test.ts  quota-pill.test.ts  state-machine-model.test.ts  ticket-cleanup.test.ts  tool-permissions.test.ts  usage-format.test.ts
deploy/: Containerfile  com.chorus.daemon.plist  container-entrypoint.sh
deploy/linux/: run-container.sh
deploy/mac/: run-container.sh
deploy/windows/: run-container.ps1
docs/: ARCHITECTURE.md  RUNNING.md
scripts/: live-codex-check.ts  live-codex-mcp-check.ts  ping-mcp-server.mjs
src/chorus/: __init__.py  orchestrator.py  projects.py  resume.py  tickets.py
src/chorus/backends/: __init__.py  codex.py
src/chorus/persistence/: store.py  (+1 more)
tests/: test_bugfixes.py  test_codex_backend.py  test_orchestrator.py  test_persistence.py  test_project_context.py  test_project_import.py  test_tickets.py
(+28 files in other folders)
