[project]
name = "chorus"
version = "0.1.0"
description = "Self-hosted AI engineering team orchestration service."
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"chorus.persistence.migrations" = ["*.sql"]
